2012-xx-xx:
    * version 3.5
    * Firefox 13 compatibility fixes
    * Add :ignorekeys meta command to handle web pages which want to handle key input themselves
      rather than Vimperator taking over all the keys (useful for apps like gmail)
    * Make hlsearch the default search highlighting option
      and use Firefox's native method
    * add -folder option to :bmark command.

2012-04-02: It's not an April's fool
    * version 3.4
    * Fixed a mem leak when closing tabs
    * Scrolling some divs failed previously when using "j". Should work now. Thanks dom.lobue
    * hinttags fixes for gmail and other apps
    * Pressing Tab works correctly in hint mode when the list of hints has been filtered
    * Search history is accessible again
    * Display correct status messages when a text search reaches either end of the buffer
    * Url links in :jump list are clickable again
    * Gracefully handle unescaped regex characters in 'urlseparator' option
    * :sanitize now respects timespan values
    * add '-select' option to :tabclose command for specifiying which tab is selected after closing the current one
    * Deleting local marks with :delmarks[!] command is working now
    * Editing password fields with the external editor works again (thanks Gianni)

2011-11-13:
    * version 3.3
    * Firefox 8 and 9 compatibility fixes
    * Reworked mode message handling. The mode message can be shown simultaneoulsy
      with other messages now. Also changed the visual display of a mode.
    * Single line message output with :echo are shown again

2011-06-03:
    * version 3.2
    * Compatibility fixes for Firefox 5.x and 6.x. Also bumped maxVersion accordingly
    * Make search more reliable
    * Reworked mode handling a bit. While in the end this will be much
      cleaner, it might have some regressions. Please report!
    * Better logging: :messages is now the main location for any informative